fix spacing issues that occured on ultrawide displays due to FlexBox not having proper spacing set on project elements.

--- a/styles/main-styles.css
+++ b/styles/main-styles.css
@@ -241,7 +241,7 @@ background: linear-gradient(180deg, rgba(255,255,255,1) 75%, rgba(255,255,255,.1
 .project-contents-flex-container {
   display: flex;
   flex-direction: row;
-  
+  justify-content: space-between;
   background-color: #ffffff;
   margin-top: 45px;
   height: 247px;
